# jkrgui

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeCommon.cmake  CMakeCommon.txt  CMakeCommons.cmake  CMakeConfig.cmake  CMakeLists.txt  CMakePresets.json  README.md  build.py  bundle.py  compile_commands.json  help.md  qt.xml  run_this_before_building_android.py  scratch.txt
JkrLuaExe/: CMakeLists.txt  JkrAudio.cpp  JkrBasic.cpp  JkrBuildSystem.cpp  JkrKeys.cpp  JkrLuaExe.cpp  JkrLuaExe.hpp  JkrLuaPlatform.cpp  JkrMath.cpp  JkrMisc.cpp  JkrMultiThreading.cpp  JkrNetwork.cpp  JkrRenderer.cpp  JkrRenderer3D.cpp  JkrTextRenderers.cpp
JkrLuaExe/JkrGUIv2/: WidgetsRefactor.lua
aJkrLua/: Bindings.cpp  Bindings2d.cpp  Bindings3d.cpp  BindingsMisc.cpp  CMakeLists.txt  EntryPoint.cpp  EntryPoint.hpp
aa_unit_testing/: CMakeLists.txt  Neural.cpp  fontagina.cpp  nodetest.cpp  notapplication.cpp  testmain.cpp  threed.cpp
application/: Application.cpp  Application.hpp  Button.cpp  Button.hpp  CMakeLists.txt  Colors.hpp  Dispatch.cpp  Draw.cpp  DrawArea.cpp  DrawArea.hpp  EventManager.cpp  EventManager.hpp  GridSheet.cpp  GridSheet.hpp  LoadCaches.cpp  LuaConfig.cpp  LuaConfig.hpp  MenuBar.cpp  MenuBar.hpp  Node.hpp  NodeView.hpp  PropertySheet.hpp  Register.cpp  TextButton.cpp  TextButton.hpp  Update.cpp  app.cpp
application/NodeEditor/: Node.hpp  NodeEditorScene.cpp  NodeEditorScene.hpp  NodeProperties.hpp  NodeView.cpp  NodeView.hpp
jit/: CMakeLists.txt  expressions.cpp  expressions.hpp  irgenerator.cpp  irgenerator.hpp  jit.hpp  jitcompilerfromir.cpp  jitcompilerfromir.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp
jit/LuaBirali/: astbirali.cpp  astbirali.hpp  confbirali.hpp  include.hpp  ir.hpp  irbirali.cpp  irbirali.hpp  jit.hpp  jitbirali.cpp  jitbirali.hpp  jithelper.hpp  lexer.hpp  lexerbirali.cpp  lexerbirali.hpp  lua.hpp  main.cpp  parser.hpp  parserbirali.cpp  parserbirali.hpp
jkrengine/: CMakeLists.txt  EventManager.cpp  EventManager.hpp  Instance.cpp  Instance.hpp  MultiThreading.hpp  Offscreen.cpp  Offscreen.hpp  Painter.cpp  Painter.hpp  PainterCache.cpp  PainterCache.hpp  PainterParameter.hpp  PainterParameter_base.cpp  PainterParameter_base.hpp  Primitive.cpp  Primitive.hpp  SDLWindow.cpp  SDLWindow.hpp  TestUtils.hpp  Window.cpp  Window.hpp  Window_base.cpp  Window_base.hpp
jkrengine/Audio/: AudioDevice.hpp  Sound.cpp  Sound.hpp
jkrengine/Global/: Config.hpp  Standards.hpp
jkrengine/Misc/: FrameCapturer.cpp  FrameCapturer.hpp  JkrFile.cpp  JkrFile.hpp  Tools.cpp  Tools.hpp
jkrengine/Network/: Client.cpp  Client.hpp  Connection.cpp  Connection.hpp  Message.hpp  Network.hpp  Server.cpp  Server.hpp  TsQueue.hpp  Udp.cpp  Udp.hpp
jkrengine/Neural/: SimpleNN.hpp
jkrengine/Renderers/: BestText_Alt.cpp  BestText_Alt.hpp  CustomImagePainter.cpp  CustomImagePainter.hpp  Generator.cpp  Generator.hpp  Renderer_base.cpp  Renderer_base.hpp
jkrgui/: AllShaders.hpp  CMakeLists.txt  EventManager.cpp  EventManager.hpp  FastTextFrontEnd.cpp  FastTextFrontEnd.hpp  GUI2DRenderer.cpp  GUI2DRenderer.hpp  GUIApplication.cpp  GUIApplication.hpp  GUIMainWindow.cpp  GUIMainWindow.hpp  GUIPainter.cpp  GUIPainter.hpp  GUIPainterCache.cpp  GUIPainterCache.hpp  GUIPainterParameter.cpp  GUIPainterParameter.hpp  GUIPrimitive.cpp  GUIPrimitive.hpp  GUIWindow.cpp  GUIWindow.hpp  Instance.cpp  Instance.hpp  JkrAudio.cpp  JkrBasic.cpp  JkrBuildSystem.cpp  JkrLuaExe.cpp  JkrLuaExe.hpp  JkrLuaPlatform.cpp  JkrMath.cpp  JkrMisc.cpp  JkrMultiThreading.cpp  JkrNetwork.cpp  JkrRenderer.cpp  JkrRenderer3D.cpp  JkrTextRenderers.cpp  LuaBundleAndroid.hpp  MultiThreading.hpp  Offscreen.cpp  (+22 more)
jkrgui/Audio/: AudioDevice.cpp  AudioDevice.hpp  FourierAudioGenerator.cpp  FourierAudioGenerator.hpp  Sound.hpp  Wav.cpp  Wav.hpp
jkrgui/Components/: AreaProxy.hpp  Area_base.hpp  BTextButtonRect.hpp  Button.cpp  Button.hpp  ButtonRect_base.hpp  Button_base.hpp  Colors.hpp  Component_base.hpp  ConfigProps.hpp  ContextMenu.hpp  ContextMenuList.cpp  ContextMenuList.hpp  FTextButtonRect.hpp  FastTextButton.cpp  FastTextButton.hpp  FocusProxy.hpp  GridSheet.cpp  GridSheet.hpp  HLayout.hpp  ImageButtonRect.hpp  ScrollableProxy.cpp  ScrollableProxy.hpp  ScrollableRect.hpp  Scrollable_base.hpp  TextLineEdit.cpp  TextLineEdit.hpp  VLayout.hpp
jkrgui/Extra/: Node.hpp
jkrgui/Font/: FastText.cpp  FastText.hpp  शोभनाक्षर.cpp  शोभनाक्षर.hpp
jkrgui/GeneralRenderers/: Line.cpp  Line.hpp  Line_base.hpp  Renderer_base.cpp  Renderer_base.hpp
jkrgui/Global/: Config.hpp  Standards.hpp
jkrgui/Misc/: FrameCapturer.cpp  FrameCapturer.hpp  GPUNeural.hpp  MousePicker.cpp  MousePicker.hpp  Recycle.hpp  RecycleBin.hpp  Utils.hpp
jkrgui/Network/: Client.hpp  Connection.cpp  Connection.hpp  Message.hpp  Network.hpp  Server.cpp  Server.hpp  TsQueue.hpp
jkrgui/Neural/: ConvolutionalNN.cpp  ConvolutionalNN.hpp  GPUNeural.hpp  SimpleNN.cpp  SimpleNN.hpp
jkrgui/Renderers/: 2d.hpp  BestText_Alt.cpp  BestText_Alt.hpp  CustomImagePainter.cpp  CustomImagePainter.hpp  FastText.cpp  FastText.hpp  FastText_base.cpp  FastText_base.hpp  Generator.cpp  Generator.hpp  Line.cpp  Line.hpp  Line_base.hpp  Renderer_base.cpp  Renderer_base.hpp  ResourceManager.cpp  ResourceManager.hpp  Shape.cpp  Shape.hpp  Shape_base.cpp  Shape_base.hpp
ksai_problems/: CMakeLists.txt  CryptoSolver.hpp  TicTacToe.hpp  Tree.hpp  include.hpp  main.cpp
ksaivulkan/: CMakeLists.txt  ksai_config.cpp  ksai_config.hpp  ksai_filestream.hpp  ksai_image.hpp  ksai_thread.hpp
ksaivulkan/Vulkan/: Config.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanBufferVMA.cpp  VulkanBufferVMA.hpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.hpp  VulkanCommandPool.cpp  VulkanCommandPool.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFence.cpp  VulkanFence.hpp  VulkanFrameBuffer.cpp  VulkanFrameBuffer.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanImageContext.hpp  VulkanImageVMA.cpp  VulkanImageVMA.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanMessenger.cpp  VulkanMessenger.hpp  VulkanQueue.cpp  (+17 more)
playground/: CMakeLists.txt  main.cpp  main2.cpp
(+292 files in other folders)
